# comfywm-cpp

./: README.md  TODO.md  comfywm.desktop  exec_into.sh  meson.build  start.sh
protocols/: meson.build
src/: cmfy_output.cpp  cmfy_output.hpp  cmfy_server.cpp  cmfy_server.hpp  cmfy_view.cpp  cmfy_view.hpp  cursor.cpp  cursor.hpp  main.cpp  meson.build  output.cpp  output.hpp  output_layout.cpp  output_layout.hpp  renderer.cpp  renderer.hpp  server.cpp  server.h  server.hpp  view.cpp  view.hpp
